--- a/Acwing/Daily/算法进阶打卡/搜索.md
+++ b/Acwing/Daily/算法进阶打卡/搜索.md
@@ -1028,3 +1028,1023 @@ int main()
 
 ## 最小步数模型
 
+​	我们之前用的bfs和dfs,都是一张表格或者一块面积,里面一个点在向旁边移动,去求a点到b点的最短路径... 而本题,是整张图的变化,这时我们把整张图当做一个点(把一个棋盘看做一个状态，求从状态a到状态b的最小步数),每变化一次就衍生出另外一个点:最小步数模型.
+
+​	八数码也是最小步数模型题目.
+
+​	这种题一般思路简单,但是用代码表示比较困难,和dp相反.
+
+
+
+### 魔板
+
+
+
+#### 题目
+
+
+
+
+
+#### 思路
+
+
+
+​	题目所给初始状态是:"12345678",问你要几步能转换到题目所给样例,采用最小步数模型的bfs宽搜:
+
+![](image/13.png)
+
+​	一般都是用哈希表来存储表示每步的状态(map)
+
+​	
+
+​	而关于本题字典序最小的路径问题： 
+
+​	一般来说，输出最字典序最小或者最大的路径不会增加题目的难度和复杂度。出题者因为懒，不搞speci judge，让我们输出唯一的答案，搞了这么一出。
+​	做法:我们按照bfs原本的顺序执行操纵，不需要增加多余的代码，就可以实现最小的字典序，只需要每次先搜索字典序最小的操作就行(本题先用A操作,再B操作,最后C操作).
+
+
+
+​	输出路径:
+
+```c++
+while (end != Start)	
+     {
+          res += pre[end].first;
+          end = pre[end].second;
+     }
+```
+
+
+
+​	但这个时间复杂度是多少呢?
+
+
+
+#### 代码
+
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+char g[2][4];
+unordered_map<string, pair<char, string>> pre;//存储string的状态前驱:chars:上一步操作,string:上一步的状态
+unordered_map<string, int> dist;//存储到达这个string的花费
+
+void Set(string state)//字符串恢复成2*4矩阵
+{
+     for (int i = 0; i < 4; i++)
+          g[0][i] = state[i];
+     for (int i = 7, j = 0; j < 4; i--, j++)
+          g[1][j] = state[i];
+}
+
+string get()	//矩阵->字符串
+{
+     string res;
+     for (int i = 0; i < 4; i++)
+          res += g[0][i];
+     for (int i = 3; i >= 0; i--)
+          res += g[1][i];
+     return res;
+}
+
+string move0(string state)
+{
+     Set(state);
+     for (int i = 0; i < 4; i++)
+          swap(g[0][i], g[1][i]);
+     return get();
+}
+
+string move1(string state)
+{
+     Set(state);
+     int v0 = g[0][3], v1 = g[1][3];
+     for (int i = 3; i >= 0; i--)
+     {
+          g[0][i] = g[0][i - 1];
+          g[1][i] = g[1][i - 1];
+     }
+     g[0][0] = v0, g[1][0] = v1;
+     return get();
+}
+
+string move2(string state)
+{
+     Set(state);
+     int v = g[0][1];
+     g[0][1] = g[1][1];
+     g[1][1] = g[1][2];
+     g[1][2] = g[0][2];
+     g[0][2] = v;
+     return get();
+}
+
+int bfs(string Start, string end)//bfs
+{
+     if (Start == end)
+          return 0;
+
+     queue<string> q;
+     q.push(Start);
+     dist[Start] = 0;
+
+     while (!q.empty())
+     {
+          auto t = q.front();
+          q.pop();
+
+          string m[3];
+          m[0] = move0(t);
+          m[1] = move1(t);
+          m[2] = move2(t);
+
+          for (int i = 0; i < 3; i++)
+               if (!dist.count(m[i]))	//去重
+               {
+                    dist[m[i]] = dist[t] + 1;
+                    pre[m[i]] = {'A' + i, t};
+                    q.push(m[i]);
+                    if (m[i] == end)
+                         return dist[end];
+               }
+     }
+
+     return -1;
+}
+
+int main()
+{
+     string Start, end;
+     for (int i = 0; i < 8; i++)
+     {
+          char x;
+          cin >>
+              x;
+          end += x;
+     }
+     Start = "12345678";
+
+     int step = bfs(Start, end);
+
+     cout << step << endl;
+
+     string res;
+     while (end != Start)	//输出路径
+     {
+          res += pre[end].first;
+          end = pre[end].second;
+     }
+
+     reverse(res.begin(), res.end());
+
+     if (step > 0)
+          cout << res << endl;
+
+     return 0;
+}
+
+```
+
+
+
+
+
+
+
+## 双端队列广搜
+
+
+
+### 电路维修
+
+
+
+#### 思路
+
+​	本题题意是:能把每一个格子的线段旋转位置,问你最少旋转几次,能让起点到达终点(像之前玩的小游戏)
+
+​	把题目意思转换一下,假如0,0(起点)能直接走到1,1,那么我们就把这段路抽象成一条边权为0的边,要是必须旋转一下才能走到1,1,那么这段路就抽象成一条边权为1的边,现在就等于问你,从起点走到终点,最小花费是多少.
+
+​	这道题可以采用dij来写(可能会超时),也可以采用双端队列bfs来写,双端队列bfs就是处理这种边权只为0和1的题目,它和普通bfs的区别就在于,当你边权为0,存对头里,边权为1,存队尾里,一般bfs求最短路只能求解边权一样的情况.(双端队列其实就是dij特殊情况,复杂度低一点)
+
+​	这道题其实就是dijkstra算法的特殊情况。(因为本题的边权只有0和1两种).然后，dijkstra的流程，就是先把源点放入优先队列，接下来重复以下操作(取出队列中距离源点最近的点—优先队列的队头，用该点更新其它与该点相邻的点的距离，再把更新后的距离放入队列)。
+​	每个点在出队的时候就说明从源点到该点的最短距离已经找到，因此要对这个点进行标记，后续计算时忽略该点。
+
+​	本题也是一样，先把左上方的(0，0)点放入队列中，然后接着操作。
+​	但是本题用的数据结构并不是优先队列，而是双端队列，为了实现和优先队列相同的效果，当边权重是零的时候，就把新的点从队列头插入，是一的时候，就从队列尾部插入。这样可以保证该队列从头部到尾部，是单调不下降的。这样，就从本质上实现了dijkstra算法。![](image/15.png)
+
+​	
+
+​	y总在视频里用两段性和单调性证明了为什么bfs可求最短路.
+
+
+
+
+
+​	细节:
+
+本题有两个位置偏移量,可能不大好理解:
+
+![](image/14.png)
+
+`int dir1[4][2] = {-1, -1, -1, 1, 1, 1, 1, -1};`
+
+这就是正常的假如你此时在(1,2)(蓝色字迹),可以前往(0,1),(0,3),(2,1),(2,3)四个点
+
+`int dir2[4][2] = {-1, -1, -1, 0, 0, 0, 0, -1};`
+
+这是用来表示此时电线的状态,假如你要从1,2走到0,3.那么格子的电线必须是'/'才行,这时候我们就需要判断给你的字符二维数组里的这个位置是不是也是'/'.而从1,2走到0,3所要走的电线对应在字符数组里的位置就是(0,2)(红笔标注),所以`(a[ix][iy] 是否等于 c[i])	,` `char c[] = "\\/\\/";`c数组存储的是理想状态,a就是现实状态,判断他们是否相等来得到是否要旋转电线.
+
+
+
+#### 代码
+
+时间复杂度 O(nm)
+
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+const int N = 500 + 10;
+char a[N][N];
+int n, m;
+char c[] = "\\/\\/";
+int dir1[4][2] = {-1, -1, -1, 1, 1, 1, 1, -1};
+int dir2[4][2] = {-1, -1, -1, 0, 0, 0, 0, -1};
+int dis[N][N];
+int main()
+{
+     int t;
+     cin >> t;
+     while (t--)
+     {
+
+          cin >> n >> m;
+          for (int i = 0; i < n; i++)
+               for (int j = 0; j < m; j++)
+               {
+                    cin >> a[i][j];
+               }
+          memset(dis, 0x3f, sizeof dis);
+          deque<pair<int, int>> q;
+          q.push_front({0, 0});
+          dis[0][0] = 0;
+          while (q.size())
+          {
+               auto t = q.front();
+               q.pop_front();
+               for (int i = 0; i < 4; i++)
+               {
+                    int nx = t.first + dir1[i][0], ny = t.second + dir1[i][1];
+                    if (nx < 0 || nx > n || ny < 0 || ny > m)
+                         continue;
+                    int ix = t.first + dir2[i][0], iy = t.second + dir2[i][1];
+                    int d = dis[t.first][t.second] + (a[ix][iy] != c[i]); //(a[ix][iy] != c[i])判断走这一步要不要旋转电线
+
+                    if (d < dis[nx][ny])
+                    {
+                         dis[nx][ny] = d;
+                         if (a[ix][iy] == c[i])
+                              q.push_front({nx, ny});
+                         else
+                              q.push_back({nx, ny});
+                    }
+               }
+          }
+          if (dis[n][m] == 0x3f3f3f3f)
+               puts("NO SOLUTION");
+          else
+               cout << dis[n][m] << endl;//最后还是输出d[n][m],虽然我们初始是[0,n)来存取数组,但那是代表格子的位置,真实的起点是(0,0),终点是(n,m)
+     }
+}
+```
+
+​	
+
+```c++
+//y总
+//大致一样,但其实不用判重,由于距离变小才能进入队列，因此之前的点不会进入再次队列中
+#include <cstring>
+#include <iostream>
+#include <algorithm>
+#include <deque>
+
+#define x first
+#define y second
+
+using namespace std;
+
+typedef pair<int, int> PII;
+
+const int N = 510, M = N * N;
+
+int n, m;
+char g[N][N];
+int dist[N][N];
+bool st[N][N];
+
+int bfs()
+{
+    memset(dist, 0x3f, sizeof dist);
+    memset(st, 0, sizeof st);
+    dist[0][0] = 0;
+    deque<PII> q;
+    q.push_back({0, 0});
+
+    char cs[] = "\\/\\/";
+    int dx[4] = {-1, -1, 1, 1}, dy[4] = {-1, 1, 1, -1};
+    int ix[4] = {-1, -1, 0, 0}, iy[4] = {-1, 0, 0, -1};
+
+    while (q.size())
+    {
+        PII t = q.front();
+        q.pop_front();
+
+        if (st[t.x][t.y]) continue;
+        st[t.x][t.y] = true;
+
+        for (int i = 0; i < 4; i ++ )
+        {
+            int a = t.x + dx[i], b = t.y + dy[i];
+            if (a < 0 || a > n || b < 0 || b > m) continue;
+
+            int ca = t.x + ix[i], cb = t.y + iy[i];
+            int d = dist[t.x][t.y] + (g[ca][cb] != cs[i]);
+
+            if (d < dist[a][b])
+            {
+                dist[a][b] = d;
+
+                if (g[ca][cb] != cs[i]) q.push_back({a, b});
+                else q.push_front({a, b});
+            }
+        }
+    }
+
+    return dist[n][m];
+}
+
+int main()
+{
+    int T;
+    scanf("%d", &T);
+    while (T -- )
+    {
+        scanf("%d%d", &n, &m);
+        for (int i = 0; i < n; i ++ ) scanf("%s", g[i]);
+
+        int t = bfs();
+
+        if (t == 0x3f3f3f3f) puts("NO SOLUTION");
+        else printf("%d\n", t);
+    }
+
+    return 0;
+}
+
+```
+
+
+
+
+
+## 双向广搜
+
+​	用来求最短路，是普通BFS求最短路模型的优化，通过每次向不同的方向扩展(一个是从起点往终点搜，还有一个是从终点向起点搜，如果两个队列中有相同的则说明走通)，让搜索空间缩小，提高搜索效率
+
+
+
+### 字串变换
+
+
+
+#### 思路
+
+(BFS,双向BFS) O((LN)^5^)
+	假如有K次变化方式，那么如果直接BFS，最坏情况下的搜索空间是 K^10^(每次k个)，非常大，所以会TLE或者MLE。
+
+![](image/16.png)
+
+​	如果采用双向BFS，则可以把搜索空间降到 2K^5^。在实际测试中只需 20ms 左右，剪枝效果很好。
+
+​	扩展(子串变换)方式是：分别枚举在原字符串中使用替换规则的起点，和所使用的的替换规则,每一次扩展要把一层(队列里的所有字符串)都扩展开
+
+​	时间复杂度
+​	假设字符串长度是 L，替换规则一共有 N 个，则：
+
+​	在最坏情况下每次会从字符串的每个位置开始，使用全部的 N 种替换规则，因此总共会有 LN 种扩展方式，从起点和终点最多会分别扩展5步，因此总搜索空间是 2(LN)^5^。
+
+​	在BFS过程中，空间中的每个状态只会被遍历一次，因此时间复杂度是 O((LN)^5^)。
+
+
+
+
+
+#### 代码
+
+```c++
+#include <iostream>
+#include <cstring>
+#include <algorithm>
+#include <queue>
+#include <unordered_map>
+
+using namespace std;
+
+const int N = 6;
+
+int n;
+string A, B;
+string a[N], b[N];
+
+int extend(queue<string> &q, unordered_map<string, int> &da, unordered_map<string, int> &db,
+           string a[N], string b[N])
+{
+     int d = da[q.front()];
+     while (q.size() && da[q.front()] == d) //一次扩展就要扩展一层,把队列里现有的字符串的都扩展一遍
+     {
+          auto t = q.front();
+          q.pop();
+
+          for (int i = 0; i < n; i++)             //枚举所有变换状态
+               for (int j = 0; j < t.size(); j++) //使用第i种替换状态对字符串进行替换
+                    if (t.substr(j, a[i].size()) == a[i])
+                    {
+                         string r = t.substr(0, j) + b[i] + t.substr(j + a[i].size());
+                         if (db.count(r))               //要是qb里有,代表找到了
+                              return da[t] + db[r] + 1; //输出花费(距离和)
+                         if (da.count(r))
+                              continue;
+                         da[r] = da[t] + 1;
+                         q.push(r);
+                    }
+     }
+
+     return 11;
+}
+
+int bfs()
+{
+     if (A == B)
+          return 0;
+     queue<string> qa, qb;//定义队列,存储A/B扩展出的某一层的所有字符串
+     unordered_map<string, int> da, db; //定义距离
+
+     qa.push(A), qb.push(B);//初始就是A和B
+     da[A] = db[B] = 0;
+
+     int step = 0;
+     while (qa.size() && qb.size())
+     {
+          int t;
+          if (qa.size() < qb.size())         //哪个短就先扩展哪个,稍微节约时间
+               t = extend(qa, da, db, a, b); //一次扩展,对队列里的每个字符串都进行变换操作
+          else
+               t = extend(qb, db, da, b, a); //一次扩展
+
+          if (t <= 10)
+               return t;
+          if (++step == 10) //扩展了10步还没有找到解,输出-1
+               return -1;
+     }
+
+     return -1;
+}
+
+int main()
+{
+     cin >> A >> B;
+     while (cin >> a[n] >> b[n]) //题目没告诉你如何终止
+          n++;
+
+     int t = bfs();
+     if (t == -1)
+          puts("NO ANSWER!");
+     else
+          cout << t << endl;
+
+     return 0;
+}
+
+```
+
+
+
+
+
+## A*
+
+​	和dij长得类似
+
+​	为启发式算法，可以看成是堆优化版dijkstra算法的升级，增添了一个估价函数(这个估价函数的值应该小于等于真实值)，通过将现在已经走过的路程和估价函数相加，利用最小堆即可实现,而堆优化版的dijkstra算法可以看成是估价函数为0的A*算法
+
+
+
+
+
+
+
+## DFS之连通性模型
+
+
+
+### 迷宫
+
+
+
+
+
+#### 思路
+
+
+
+​	本题较为简单,dfs模板题(bfs也可以写). 
+
+​	只要判断能不能走到终点就可以,不用输出花费
+
+​	不回溯
+
+​	dfs返回值:bool
+
+​	时间复杂度是o(n^2^)么,每个点只走一次
+
+
+
+#### 代码
+
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+const int N = 110;
+char a[N][N];
+int n;
+int dir[4][2] = {1, 0, -1, 0, 0, 1, 0, -1};
+int st[N][N];
+int sx, sy, ex, ey;
+bool dfs(int x, int y) //返回bool类型
+{
+     if (x == ex && y == ey)
+          return 1;
+     st[x][y] = 1; //防止走之前走过的路(点),陷入循环
+     for (int i = 0; i < 4; i++)
+     {
+          int nx = x + dir[i][0], ny = dir[i][1] + y;
+          if (nx < 0 || nx >= n || ny < 0 || ny >= n)
+               continue;
+          if (a[nx][ny] == '#' || st[nx][ny] == 1)
+               continue;
+         
+          st[nx][ny] = 1;
+          if (dfs(nx, ny))
+               return 1;
+     }
+     return 0;
+}
+
+int main()
+{
+     int t;
+     cin >> t;
+     while (t--)
+     {
+          cin >> n;
+          for (int i = 0; i < n; i++)
+               for (int j = 0; j < n; j++)
+                    cin >> a[i][j];
+          memset(st, 0, sizeof st);
+          cin >> sx >> sy >> ex >> ey;
+
+          if (a[sx][sy] == '#' || a[ex][ey] == '#')
+               cout << "NO" << endl;
+          else
+          {
+               if (dfs(sx, sy))
+                    cout << "YES" << endl;
+               else
+                    cout << "NO" << endl;
+          }
+     }
+}
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+### 红与黑
+
+
+
+#### 思路
+
+​	与上题类似,注意输入格式
+
+
+
+
+
+
+
+#### 代码
+
+```c++
+#include <bits/stdc++.h>
+#include <bits/stdc++.h>
+using namespace std;
+const int N = 110;
+char a[N][N];
+int n, m;
+int dir[4][2] = {1, 0, -1, 0, 0, 1, 0, -1};
+int st[N][N];
+int sx, sy, ex, ey;
+int Sum = 1;
+void dfs(int x, int y) //返回bool类型
+{
+     st[x][y] = 1; //防止走之前走过的路(点),陷入循环
+     for (int i = 0; i < 4; i++)
+     {
+          int nx = x + dir[i][0], ny = dir[i][1] + y;
+          if (nx < 0 || nx >= n || ny < 0 || ny >= m)
+               continue;
+          if (a[nx][ny] == '#' || st[nx][ny] == 1)
+               continue;
+
+          st[nx][ny] = 1;
+          Sum++;
+          dfs(nx, ny);
+     }
+     return;
+}
+
+int main()
+{
+
+     while (cin >> m >> n, m || n)
+     {
+          for (int i = 0; i < n; i++)
+               for (int j = 0; j < m; j++)
+                    cin >> a[i][j];
+          for (int i = 0; i < n; i++)
+               for (int j = 0; j < m; j++)
+               {
+                    if (a[i][j] == '@')
+                         sx = i, sy = j;
+               }
+          memset(st, 0, sizeof st);
+
+          dfs(sx, sy);
+          cout << Sum << endl;
+          Sum = 1;
+     }
+}
+
+```
+
+
+
+
+
+
+
+
+
+## DFS之搜索顺序
+
+
+
+### 马走日
+
+题目
+
+马在中国象棋以日字形规则移动。
+
+请编写一段程序，给定 n∗m 大小的棋盘，以及马的初始位置 (x，y)，要求不能重复经过棋盘上的同一个点，计算马可以有多少途径遍历棋盘上的所有点。
+
+
+
+输入格式
+
+第一行为整数 T，表示测试数据组数。
+
+每一组测试数据包含一行，为四个整数，分别为棋盘的大小以及初始位置坐标 n,m,x,y。
+
+输出格式
+
+每组测试数据包含一行，为一个整数，表示马能遍历棋盘的途径总数，若无法遍历棋盘上的所有点则输出 0。
+
+
+
+数据范围
+
+1≤T≤9,1≤m,n≤9,
+0≤x≤n−1,0≤y≤m−1
+
+
+
+输入样例：
+
+```
+1
+5 4 0 0
+```
+
+输出样例：
+
+```
+32
+```
+
+
+
+
+
+#### 思路
+
+dfs模板题,请注意回溯的细节
+
+本题要回溯,并且因为是讨论所有路线,所以题目所给数据较小,但也运行了很长时间:三千ms
+
+
+
+
+
+#### 代码
+
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+const int N = 10;
+int dir[8][2] = {2, 1, 2, -1, -2, 1, -2, -1, 1, -2, 1, 2, -1, 2, -1, -2};
+int n, m, sx, sy;
+int st[N][N];
+int Sum = 0;
+void dfs(int x, int y, int num)
+{
+     //如果这里加上st[x][y]=1,则最后也要把它回溯成0
+     if (num == n * m)
+     {
+          Sum++;
+          return;
+     }
+
+     for (int i = 0; i < 8; i++)
+     {
+          int nx = x + dir[i][0], ny = dir[i][1] + y;
+          if (nx < 0 || nx >= n || ny < 0 || ny >= m)
+               continue;
+          if (st[nx][ny])
+               continue;
+          st[nx][ny] = 1;
+          dfs(nx, ny, num + 1); //必须num+1,不能++
+          st[nx][ny] = 0;       //回溯,当运行到这一句的时候,代表一条路线讨论完了(可能走通,可能没走通)
+     }
+}
+int main()
+{
+     int t;
+     cin >> t;
+     while (t--)
+     {
+          cin >> n >> m >> sx >> sy;
+          memset(st, 0, sizeof st);
+          st[sx][sy] = 1; //这句不能忘
+          dfs(sx, sy, 1);
+          cout << Sum << endl;
+          Sum = 0;
+     }
+}
+```
+
+
+
+
+
+
+
+
+
+### 单词接龙
+
+
+
+
+
+
+
+
+
+### 分成互质组
+
+
+
+
+
+#### 思路
+
+​	本题数据量较小,采用爆搜的方法,搜索出所有的分组方案,选取组数最小的方案数(剪枝),np完全问题.
+
+​	本题搜索方法之前没遇过,这个搜索方法目的是使得分的组数尽可能少
+
+​	方法:
+
+​	分支方法:第一个数放在第一组,然后取下一个数,先判断它能不能放入之前存在的组(第一组..),行的话在这就可以进行一次dfs,进行深度讨论(分支):1:把这个数放入第一组,取第三个数,2:给第二个数新开一组,把它放入新一组里...
+
+![](image/17.png)
+
+
+
+
+
+#### 代码
+
+```c++
+//和y总代码有点不同,我这写法与下一题小猫爬山雷同
+//小数据,直接爆搜
+#include <iostream>
+#include <vector>
+#include <algorithm>
+using namespace std;
+
+const int N = 15;
+vector<int> g[N];
+int nums[N];
+int ans = N;
+int n;
+
+int gcd(int a, int b)
+{
+     return b ? gcd(b, a % b) : a;
+}
+
+bool check(vector<int> &vec, int x) //检测这个数和这个组是否互质
+{
+     for (int i = 0; i < vec.size(); i++)
+          if (gcd(vec[i], x) > 1)
+               return false;
+     return true;
+}
+
+
+// u是当前处理到序列的下标，used是目前使用到的组数
+void dfs(int u, int used)
+{
+     // 剪枝：如果当前使用的组已经>=目前获得的最优解，停止当前分支的搜索
+     if (used >= ans)
+          return;
+
+     if (u >= n)
+     {
+          ans = min(ans, used + 1);
+          return;
+     }
+
+    
+     // 先在已经使用的组里面找，看看能不能插进去,但即使能不能插的进去都要再试着放入新的组里找,可能虽然这两个个数互质,但把他们放一起并非最佳方案
+     for (int i = 0; i <= used; i++)
+     {
+          if (check(g[i], nums[u]))
+          {
+               g[i].push_back(nums[u]);
+               dfs(u + 1, used);
+               g[i].pop_back(); //回溯
+          }
+     }
+
+	//放入新的组    
+     // 剪枝：因为n个数最多只放进n个组，所以只要总组数<=n，允许尝试放进新的组
+     if (used + 1 <= n)
+     {
+          g[used + 1].push_back(nums[u]);
+          dfs(u + 1, used + 1);
+          g[used + 1].pop_back();//回溯
+     }
+}
+
+int main()
+{
+     scanf("%d", &n);
+
+     for (int i = 0; i < n; i++)
+          scanf("%d", &nums[i]);
+
+     // 初始处理nums[0], 初始放入g[0]
+     dfs(0, 0);
+
+     printf("%d\n", ans);
+
+     return 0;
+}
+
+```
+
+
+
+
+
+
+
+
+
+
+
+## DFS之剪枝与优化
+
+
+
+### 小猫爬山
+
+
+
+
+
+#### 思路
+
+​	与互质数那题雷同
+
+​	难点在于选择正确的搜索顺序(方法)
+
+
+
+
+
+#### 代码
+
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+const int N = 20;
+int a[N], g[N];
+int u = 0x3f3f3f3f;
+int n, w;
+vector<int> v[N];
+
+void dfs(int idx, int used)
+{
+     //剪枝
+     //要是现在的缆车使用量以及大于之前算出的答案的缆车数量,直接退出
+     if (used >= u)
+          return;
+
+     //赋值
+     if (idx == n + 1)
+     {
+          u = min(used, u);
+          return;
+     }
+
+     //看看第idx只猫能不能插入之前的缆车
+     for (int i = 0; i <= used; i++)
+     {
+          if (g[i] + a[idx] <= w)
+          {
+               g[i] += a[idx];
+               dfs(idx + 1, used);
+               g[i] -= a[idx];
+          }
+     }
+
+     //把第idx只猫放入新的缆车,无论它能不能插入前面的缆车,这步都要进行,因为要搜索出所有组合方案
+     if (used + 1 <= u)
+     {
+          g[used + 1] += a[idx];
+          dfs(idx + 1, used + 1);
+          g[used + 1] -= a[idx];
+     }
+}
+
+int main()
+{
+     cin >> n >> w;
+     for (int i = 0; i < n; i++)
+          cin >> a[i];
+
+     dfs(0, 0);
+     cout << u+1 << endl;
+}
+```
+
+
+
+
+
+
+
+
+
+### 数独
+
+
+
+
+
+
+
