--- a/Acwing/Daily/算法进阶打卡/搜索.md
+++ b/Acwing/Daily/算法进阶打卡/搜索.md
@@ -2048,3 +2048,370 @@ int main()
 
 
 
+
+
+
+
+
+
+### 木棍
+
+
+
+#### 思路
+
+题目等效于一堆数分成几组,使得每组数总和相同,这个总和最小多少
+
+
+
+​	因为不知道原始木棒的长度len，但是知道每根小木棍的长度，小木棒最长的时候就是一根的时候也就是长度等于所有的小木棍的长度总和sum。所以，我们可以枚举长度len。这样子就把查询问题转化成了判断该长度是否可行的问题。
+​	在长度确定的同时也就确定了小木棒的数量cnt=sum/len，那么这个就可以作为合法标志的判断条件：在所有的小木棍都用完的情况下拼成了cnt个长度相等的小木棒。
+这个时候就要思考这道题要让计算机做什么？
+
+枚举长度len；
+用之前还没有使用过的小木棍拼凑小木棒；
+判断该长度方案是否可行。
+考虑上面的那些状态是需要在搜索中考虑到的？
+每根小木棒的长度len； 已经拼成了多少根小木棒； 每一根小木棍的状态。
+因为上面的sum最大是64*50（这个数字还是蛮大的），那么最坏的打算是每一个长度都要考虑进去，每一个长度的每一种拼法也都要尝试一遍，这样的话最后得出答案的话就是会需要很长时间的，更何况给出的数据是多组数据，所以我们要考虑剪枝优化。
+
+
+
+多处剪枝优化:
+
+​	搜索顺序的优化：我们可以按照小木棍的长度进行排序，从大到小，
+
+​	可以在小木棒的长度上考虑剪枝。最长是sum，最短是最长的小木棍的长度，而且小木棒的长度一定是sum的因数，我们可以有选择的选择长度进行dfs。
+
+​	在上面已经排好序的情况下，限制小木棍加入到木棒中的编号(last)，保证加入进来的木棍的长度是递减的，（长的必须比短的先加入到正在拼凑的木棒里来）这样子的话可以避免重复搜索。
+
+​	记录失败的长度。若该长度的木棍拼凑失败，则该长度的一系列木棍均拼凑失败（在一大堆小木棍中可能有重复长度的木棍），此时记录最近一次尝试的长度(fail值)，若该分支搜索失败，便不再向正在尝试的木棒中加入其他的相同长度的木棍。
+
+​	如果放第一根木棒和放最后一根木棒都失败了，那么该长度一定不合法。这个可以用反证法证明:如果木棍在第一个位置不合法的话：假设我们把该木棍用在其他的位置合法了，那么我们就可以把顺序颠倒一下，把该木棒放到第一个也是合法的，该假设与条件不符。
+同理：如果木棍在最后一个位置不合法的话：假设我们把该木棍用在其他的位置合法了，那么我们就可以把顺序颠倒一下，把该木棒放到最后一个也是合法的，该假设与条件不符。但是，放到中间的木棍就不一样了，因为这种情况也可能是该木棍和前面组成该木棒的某一个木棍不合适，所以才造就了他的不合法。在这种情况下，可能换一种方法就合适了。
+
+
+
+
+
+#### 代码
+
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+const int N = 100;
+int a[N], n, m, max_val, sum, i, len, cnt, vis[N], true_n;
+int cmp(int a, int b) //从大到小排序
+{
+     return a > b;
+}
+int dfs(int cnm, int cab, int last) // cnm为当前第几根木棒了,cab记录当前拼接的木棒的长度,last为上一次已经选过的小木棍
+{
+     if (cnm > cnt) //所有木棒找齐,满足条件了
+          return true;
+
+     if (cab == len) //如果发现这一段已经用完了(一根木棍被拼接完成).
+          return dfs(cnm + 1, 0, 1); //因为前i个棍子都在第cnm组枚举了,所以直接从第i+1根棍子开始枚举
+     //保证木棍组成木棒时的编号是递减的
+
+     //下面都是在拼接一根木棒的过程中
+     int fail = 0; //记录上一次失败的值,如果这次还是的话,那么肯定是不能选择的
+     for (int i = last; i <= true_n; i++)
+          if (!vis[i] && a[i] != fail && cab + a[i] <= len) //没有被访问过的小木棍,不是上一次失败的值,长度满足在len以内
+          {
+               vis[i] = 1;
+               if (dfs(cnm, cab + a[i], i + 1)) //开始下一次dfs
+                    return true;
+               fail = a[i];                       //失败了,记录下来,下一根再碰到这样长度的小木棍,直接丢弃
+               vis[i] = 0;                        //回溯
+               if (cab == 0 || cab + a[i] == len) //如果cab为0,或者相加正好是len,但是失败了,那么一定是失败了.(第一根失败了或者最后一根失败了)
+                    return false;
+
+               int j = i; //如果第i根失败了,那么长度跟i一样的棍子也一定失败
+               while (j <= n && a[j] == a[i])
+                    j++;
+               i = j - 1;
+          }
+     return false; //所有的都失败了,那么肯定是失败的.
+}
+
+int main()
+{
+     ios::sync_with_stdio(false);
+     while (cin >> n && n)
+     {
+          int x;
+          max_val = 0, sum = 0;
+          true_n = 0;
+          for (i = 1; i <= n; i++)
+          {
+               cin >> x;
+               if (x > 50) //自动忽略掉大于50的数据
+                    continue;
+               true_n++; //这才是真正的n QAQ
+               a[true_n] = x;
+               max_val = max(max_val, a[true_n]);
+               sum += a[true_n];
+          }
+          sort(a + 1, a + 1 + true_n, cmp);      //排序优化搜索顺序
+          for (len = max_val; len <= sum; len++) //枚举木棒长度,判断这个长度合不合法
+          {
+               if (sum % len)      //总长除以每根木棒的长度居然除不尽,代表这个长度不符合
+                    continue;
+               cnt = sum / len;             //计算出cnt多少段,作为一个优化条件,小木棍个数>cnt还凑不齐一个长度的木棍,返回false
+               memset(vis, 0, sizeof(vis)); //初始化
+               if (dfs(1, 0, 1))            //如果搜索成功,最小值就是它(从小到大搜索的)
+                    break;
+          }
+          cout << len << endl;
+     }
+     return 0;
+}
+
+```
+
+
+
+
+
+
+
+
+
+
+
+## 迭代加深
+
+​	虽然题目所给的范围显示着dfs搜索最多要搜n层,但根据自己的估算,其实在远小于n的层数就能找到答案,所以要是真的不加限制一直深搜,会浪费较多时间
+
+​	而所谓的迭代加深,就是限定一个深度,先设置限定层数是1层,搜索第一层的所有分枝,要是没搜到,再搜第二层的所有分支...
+
+
+
+![](image/18.png)
+
+
+
+![](image/19.png)
+
+### 加成序列
+
+
+
+#### 思路
+
+​	
+
+​	本题虽然看似最多要搜索100层(最大数是100. 1,2,3,4,5,6,7..100总共100层 ),但我们可以看出其实不至于搜索到这么深的地方:比如要凑128: 1 2 4 8 16 32 64 128,8层也就够了.这就典型的迭代加深.
+
+![](image/20.png)
+
+
+
+​	剪枝的目的:让搜索树变得短一点,让分支变得少一点
+
+​	第一个剪枝:已经知道0~u-1层是什么数,第u格的数从大到小来写,越大的u越接近答案
+
+(通过排序,达到剪枝的目的,挺常见的剪枝套路)
+
+```c++
+for (int i = u - 1; i >= 0; i--)//双重循环,找到所有ij组合
+		for (int j = i; j >= 0; j--)
+		{
+			path[u] = path[i] + path[j];//第u格的数=第i格的数+第j格的数
+		}
+```
+
+
+
+#### 代码
+
+```c++
+//用path[i]存储路径
+#include <cstring>
+#include <iostream>
+#include <algorithm>
+
+using namespace std;
+
+const int N = 110;
+
+int n;
+int path[N];
+
+bool dfs(int u, int k)//当前第u层,总共k层
+{
+	if (u == k)
+		return path[u - 1] == n;//到了第k层了
+
+	bool st[N] = {0};//防止重复
+	for (int i = u - 1; i >= 0; i--)
+		for (int j = i; j >= 0; j--)
+		{
+			int s = path[i] + path[j];//填充第u格,第u格是第i格和第j格上的数相加而成
+			//i,j都从大到小(从后往前)枚举,这样可以使得s能尽可能的大,从而更接近n,使得树更短
+			if (s > n || s <= path[u - 1] || st[s]) //判重,要是s之前搜索过了,直接continue,避免重复搜索
+				continue;
+			st[s] = true;
+			path[u] = s;
+			if (dfs(u + 1, k))
+				return true;
+		}
+
+	return false;
+}
+
+int main()
+{
+	path[0] = 1;
+	while (cin >> n, n)
+	{
+		int k = 1;
+		while (!dfs(1, k))//迭代加深,先假设总深度也只有1,1层不行,就++
+			k++;
+
+		for (int i = 0; i < k; i++)
+			cout << path[i] << ' ';
+		cout << endl;
+	}
+
+	return 0;
+}
+
+
+```
+
+
+
+
+
+
+
+
+
+
+
+## 双向dfs
+
+
+
+### 送礼物
+
+
+
+
+
+#### 思路
+
+![](image/21.png)
+
+
+
+
+
+![](image/22.png)
+
+
+
+
+
+#### 代码
+
+```c++
+#include <algorithm>
+#include <iostream>
+#include <vector>
+
+using namespace std;
+
+typedef long long LL;
+
+const int N = 1 << 25; // k最大是25， 因此最多可能有2^25种方案
+
+int n, m, k;
+int g[50];      // 存储所有物品的重量
+int weights[N]; // weights存储能凑出来的所有的重量
+int cnt = 0;
+int ans; // 用ans来记录一个全局最大值
+
+// u表示当前枚举到哪个数了， s表示当前的和
+void dfs(int u, int s)
+{
+     // 如果我们当前已经枚举完第k个数（下标从0开始的）了， 就把当前的s， 加到weights中去
+     if (u == k)
+     {
+          weights[cnt++] = s;
+          return;
+     }
+
+     // 枚举当前不选这个物品
+     dfs(u + 1, s);
+
+     // 选这个物品, 做一个可行性剪枝
+     if ((LL)s + g[u] <= m)
+     { //计算和的时候转成long long防止溢出
+          dfs(u + 1, s + g[u]);
+     }
+}
+
+void dfs2(int u, int s)
+{
+     if (u == n)
+     { // 如果已经找完了n个节点， 那么需要二分一下
+          int l = 0, r = cnt - 1;
+          while (l < r)
+          {
+               int mid = (l + r + 1) >> 1;
+               if (weights[mid] <= m - s)
+                    l = mid;
+               else
+                    r = mid - 1;
+          }
+     //不能用lower和upper,因为他是在从大到小的数列里找最最大的<=m-s的数
+          ans = max(ans, weights[l] + s);
+          return;
+     }
+
+     // 不选择当前这个物品
+     dfs2(u + 1, s);
+
+     // 选择当前这个物品
+     if ((LL)s + g[u] <= m)
+          dfs2(u + 1, s + g[u]);
+}
+
+int main()
+{
+     cin >> m >> n;
+     for (int i = 0; i < n; i++)
+          cin >> g[i];
+
+     // 优化搜索顺序（从大到小）
+     sort(g, g + n,greater<int>());
+     
+
+     // 把前k个物品的重量打一个表
+     k = n >> 1;
+     dfs(0, 0);
+
+     // 做完之后， 把weights数组从小到大排序
+     sort(weights, weights + cnt);
+
+     // 判重
+     int t = 1;
+     for (int i = 1; i < cnt; i++)
+          if (weights[i] != weights[i - 1])
+               weights[t++] = weights[i];
+     cnt = t;
+
+     // 从k开始， 当前的和是0
+     dfs2(k, 0);
+
+     cout << ans << endl;
+
+     return 0;
+}
+
+
+```
+
