--- a/Acwing/Daily/算法进阶打卡/搜索.md
+++ b/Acwing/Daily/算法进阶打卡/搜索.md
@@ -37,7 +37,7 @@
 #### 代码
 
 ```c++
-队列实现dfs
+队列实现bfs
 
 #include <bits/stdc++.h>
 using namespace std;
@@ -857,7 +857,7 @@ int main()
 
 ## 多源BFS
 
-给出n个点，再给一个集合,集合里面包含了这n个点的一部分点,现在要求出这n个点(所有)到这点的集合的最短距离。(最短距离就是假如一个点x，它到集合中每个点的距离是d1,d2,d3,d4……,那么点x到集合的最短距离就是d1,d2,d3这些距离的最小值)
+​	给出n个点，再给一个集合,集合里面包含了这n个点的一部分点,现在要求出这n个点(所有)到这点的集合的最短距离。(最短距离就是假如一个点x，它到集合中每个点的距离是d1,d2,d3,d4……,那么点x到集合的最短距离就是d1,d2,d3这些距离的最小值)
 
 
 
@@ -869,11 +869,11 @@ int main()
 
 #### 思路
 
-题目大意是矩阵中每一个位置到所有1的最短距离。(所有的1就是上面所说的点的集合)
+​	题目大意是矩阵中每一个位置到所有1的最短距离。(所有的1就是上面所说的点的集合)
 
-要是直接用bfs求解，把每个1当作起点，遍历一遍全图，给每个位置附上距离(保留最小)，肯定会超时，因为复杂度是n^4^
+​	要是直接用bfs求解，把每个1当作起点，遍历一遍全图，给每个位置附上距离(保留最小)，肯定会超时，因为复杂度是n^4^
 
-多源bfs算法写起来比较简单，和普通bfs的区别就在于要先遍历一遍矩阵，把所有为1的点先存入队列，然后再进行`while(q.size())`。
+​	多源bfs算法写起来比较简单，和普通bfs的区别就在于要先遍历一遍矩阵，把所有为1的点先存入队列，然后再进行`while(q.size())`。复杂度是n^2^。
 
 证明可以结合以下图片和代码进行理解:
 
@@ -881,7 +881,11 @@ int main()
 
 ![](image/12.png)
 
-如上图这个矩阵，1的位置如图分布，我们先把1都存入队列，然后开始遍历每个1的四周，给其它点附上距离，要是碰到这个点已经有距离了，直接跳过，因为代表肯定有1个1离这个点的距离比你更近！！这样遍历完全图退出bfs，每个点遍历一遍，复杂度是n^2^。
+​	如上图这个矩阵，1的位置如图分布，我们先把1都存入队列，然后开始遍历每个1的四周，给其它点附上距离，要是碰到这个点已经有距离了，直接跳过，因为代表肯定有1个1离这个点的距离比你更近！！这样遍历完全图退出bfs，每个点遍历一遍，
+
+
+
+![](image/24.png)
 
 
 
@@ -2083,7 +2087,7 @@ int main()
 
 ​	可以在小木棒的长度上考虑剪枝。最长是sum，最短是最长的小木棍的长度，而且小木棒的长度一定是sum的因数，我们可以有选择的选择长度进行dfs。
 
-​	在上面已经排好序的情况下，限制小木棍加入到木棒中的编号(last)，保证加入进来的木棍的长度是递减的，（长的必须比短的先加入到正在拼凑的木棒里来）这样子的话可以避免重复搜索。
+​	在上面已经排好序的情况下，限制小木棍加入到木棒中的编号(last)，保证加入进来的木棍的长度是递减的，（长的必须比短的先加入到正在拼凑的木棒里来）这样子的话可以避免重复搜索。(组合数的概念,防止重复搜索 如3 2 1, 3 1 2,这其实是同一种)
 
 ​	记录失败的长度。若该长度的木棍拼凑失败，则该长度的一系列木棍均拼凑失败（在一大堆小木棍中可能有重复长度的木棍），此时记录最近一次尝试的长度(fail值)，若该分支搜索失败，便不再向正在尝试的木棒中加入其他的相同长度的木棍。
 
@@ -2299,9 +2303,37 @@ int main()
 
 
 
+> 　达达帮翰翰给女生送礼物，翰翰一共准备了 N个礼物，其中第 i 个礼物的重量是 G[i]。
+>
+> 达达的力气很大，他一次可以搬动重量之和不超过 W 的任意多个物品。
+>
+> 达达希望一次搬掉尽量重的一些物品，请你告诉达达在他的力气范围内一次性能搬动的最大重量是多少。
+>
+> 
+>
+> 第一行两个整数，分别代表 W 和 N。
+> 以后 N 行，每行一个正整数表示 G[i]。
+>
+> 输出:
+> 仅一个整数，表示达达在他的力气范围内一次性能搬动的最大重量。
+>
+> 数据范围:
+> 1≤N≤46,  1≤W,G[i]≤2^31^−1
+>
+> 输入样例：
+> 20 5
+> 7
+> 5
+> 4
+> 18
+> 1
+>
+> 输出样例：
+> 19
 
 
-#### 思路
+
+思路
 
 ![](image/21.png)
 
@@ -2411,7 +2443,6 @@ int main()
 
      return 0;
 }
-
 
 ```
 
